--- a/minggu-03/index.html
+++ b/minggu-03/index.html
@@ -1,12 +1,57 @@
 <!DOCTYPE html>
-<html>
+<html lang="id">
 <head>
-  <title>Website Antrian Loket</title>
+  <meta charset="UTF-8">
+  <title>Dokumen PDF Kelompok</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 20px;
+    }
+    h1 {
+      text-align: center;
+      color: #333;
+    }
+    .pdf-container {
+      margin: 20px 0;
+      text-align: center;
+    }
+    iframe {
+      width: 100%;
+      height: 600px;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+    }
+    a {
+      display: inline-block;
+      margin-top: 10px;
+      padding: 10px 15px;
+      background: #007bff;
+      color: white;
+      text-decoration: none;
+      border-radius: 5px;
+    }
+    a:hover {
+      background: #0056b3;
+    }
+  </style>
 </head>
 <body>
-  <h1>Halo, ini Website Antrian Loket!</h1>
+  <h1>Dokumen PDF Kelompok</h1>
+
+  <div class="pdf-container">
+    <h2>1. Kelompok 4 Algoritma dan Pemrograman</h2>
+    <iframe src="Kelompok 4 Algoritma Dan Pemrograman.pdf"></iframe>
+    <br>
+    <a href="Kelompok 4 Algoritma Dan Pemrograman.pdf" target="_blank">Buka Fullscreen</a>
+  </div>
+
+  <div class="pdf-container">
+    <h2>2. Laporan Array dan Queue Kelompok 1</h2>
+    <iframe src="LAPORAN ARRAY DAN QUEUE KLMPOK 1.pdf"></iframe>
+    <br>
+    <a href="LAPORAN ARRAY DAN QUEUE KLMPOK 1.pdf" target="_blank">Buka Fullscreen</a>
+  </div>
+
 </body>
 </html>
-git add .
-git commit -m "Tambah index.html"
-git push origin main
