--- a/minggu-03/index.html
+++ b/minggu-03/index.html
@@ -2,7 +2,7 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8">
-  <title>Dokumen PDF Kelompok</title>
+  <title>Dokumen PDF minggu 3</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -37,7 +37,7 @@
   </style>
 </head>
 <body>
-  <h1>Dokumen PDF Kelompok</h1>
+  <h1>Dokumen PDF minggu 3</h1>
 
   <div class="pdf-container">
     <h2>1. Kelompok 4 Algoritma dan Pemrograman</h2>
